multiple css alignment/spacing issued solved

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 
-* {
-        box-sizing: border-box;
+
+
+* {  
+    box-sizing: border-box;
+    /* margin: 0 !important; */
 }
 
 /* Web Fonts ------*/
@@ -38,13 +41,8 @@
 /* Basic Styles ------*/
 
 body {
-    margin: 0;
-    min-width: 320px;
-}
-
-.page-wrapper {
-    background-color: #ececec;
     margin: 0 auto;
+    min-width: 320px;
 }
 
 h1,
@@ -58,6 +56,7 @@ h2 {
     color: #646464;
     text-align: center;
 }
+
 
 
 /* link Styles ------*/
@@ -96,6 +95,20 @@ p {
 
 /* Header Styles ------*/
 
+.header-row-1 {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    margin-bottom: 40px;
+}
+
+.header-row-2 {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+
+}
+
 #title {
     display: flex;
     justify-content: center;
@@ -107,21 +120,24 @@ p {
 }
 
 header {
-    width: 90vw;
-    margin: 0 auto;
+    width: 100vw;
+    margin-top: 40px;
 }
 
 #main-pic {
-    margin: 40px 0 20px 0;
+    margin: 0 auto;
+}
+
+#main-topic {
+    width: 80%;
+    margin: 0 auto;
 }
 
 /* Navigation ------*/
 
 
 nav {
-    align-items: center;
     display: flex;
-    justify-content: center; 
     flex-direction: column;
     background-color: #f5f4f4;
 }
@@ -134,9 +150,9 @@ nav h2 {
 ul {
     display: flex;
     flex-direction: column;
-    width: 90%;
-    margin: 0;
-    padding: 0
+    width: 90vw;
+    margin: 0 auto;
+    padding: 0;
 }
 
 ul a{
@@ -168,12 +184,12 @@ margin: 5px;
 }
 
 .main-wrapper p {
-    width: 90%;
+    width: 100vw;
     font-family: "BoxedLight" ;
     color: #646464;
 }
 
-img {
+.main-wrapper img {
     width: 80%;
     flex: 1;   
     padding: 10px;
@@ -187,19 +203,25 @@ footer {
     text-align: center;
     margin: 0 auto;
     background-color: #e7e3e3;
-    width: 90%;
+    width: 100vw;
     padding-top: 10px;
     font-family: "BoxedLight";
+}
+
+footer p {
+    width: 90%;
+    margin: 20px auto;
 }
 
 #email {
     background-color: #e7e3e3;
     font-family: "BoxedLight";
     font-size: 18pt;
+    color: rgb(0, 0, 0);
 }
 
 hr {
-    height: 4px;
+    height: 1px;
     width: 80%;
 }
 
@@ -208,7 +230,7 @@ hr {
     flex-direction: row;
     flex: 1;
     justify-content: space-between;
-    margin: 0 10px;
+    margin: 0 30px 5px 30px;
 }
 
 .contact-info a{
@@ -217,7 +239,56 @@ hr {
 
 /* Media Queries ------*/
 
+@media screen and (min-width: 768px) {
+    
+    nav {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
 
+    ul {
+        justify-content: space-evenly;
+        flex-direction: row;
+        flex: 1;
+        padding: 0 12em;
+        width: 100%;
+    }
 
-/* Clearfix ------*/
-.box:before, .box:after { content: ''; display: table; clear: both; }
+    li {
+        padding: 0 10px;
+        flex-grow: 0;
+        margin: 0;
+    }
+
+    #title {
+
+        margin-bottom: 0;
+    }
+    li,
+    a,
+    a:link, 
+    a:visited {
+        background-color: #ffffff00;
+    }
+
+    .header-row-2 {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 40px;
+    }
+
+    #main-pic{
+        order: 2;
+        width: 50%;
+        padding: 0 20px 0 40px;
+    }
+
+    #main-topic {
+        width: 50%;
+        padding: 0 20px 0 40px;
+        text-align: left;
+
+    }
+
+  
+}
